# grid-2d

./: .gitignore  .travis.yml  Cargo.toml  README.md  shell.nix
.github/workflows/: test.yml
src/: coord.rs  coord_arithmetic.rs  coord_system.rs  grid.rs  lib.rs
