[package]
name = "grid_2d"
description = "A general purpose 2d grid"
version = "0.13.1"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/grid-2d.git"
repository = "https://github.com/stevebob/grid-2d.git"
documentation = "https://docs.rs/grid_2d"

[features]
serialize = ["serde", "coord_2d/serialize"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive"], optional = true }
coord_2d = "0.2"
